ext/frc42_dispatch/macros/tests/naming/illegal-chars.stderr
error: proc macro panicked
  --> tests/naming/illegal-chars.rs:12:18
   |
12 |     let _str_hash = method_hash!("Bad!Method!Name!");
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: called `Result::unwrap()` on an `Err` value: IllegalName(IllegalCharacters)
